@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.9'
+	id 'org.springframework.boot' version '3.0.4'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'java'
 	id 'idea'
@@ -7,8 +7,8 @@ plugins {
 
 group = 'com.mostlysafe'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 configurations {
 	compileOnly {
@@ -27,7 +27,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.data:spring-data-mongodb'
 	implementation 'com.google.guava:guava:29.0-jre'
@@ -52,4 +51,8 @@ test {
 	testLogging {
 		events "passed", "skipped", "failed"
 	}
+}
+
+bootRun {
+	jvmArgs = ["--add-opens", "java.base/java.nio.charset=ALL-UNNAMED" ]
 }
